--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
                             give
                             them the possible solutions.</h2>
                     </div>
+                    <div class="row hero-buttons">
+                        <div class="know-more-btn">
+                            <button type="button" class="btn btn-outline-success btn-lg kmbutton" style="color: #393e46;border-color: #393e46;">KNOW MORE</button>
+                        </div>
+                        <div class="contact-us-button">
+                            <button type="button" class="btn btn-success btn-lg" style="background-color: #393e46;border-color: #393e46;">CONTACT US</button>
+                        </div>
+                    </div>
+                    
                 </div>
 
                 <div class="col" id="example">
